docs-archive/apache-airflow-providers-amazon/9.33.0/_sources/_api/airflow/providers/amazon/aws/operators/redshift_data/index.rst.txt
airflow.providers.amazon.aws.operators.redshift_data
====================================================

.. py:module:: airflow.providers.amazon.aws.operators.redshift_data


Classes
-------

.. autoapisummary::

   airflow.providers.amazon.aws.operators.redshift_data.ResumableJobMixin
   airflow.providers.amazon.aws.operators.redshift_data.RedshiftDataOperator


Module Contents
---------------

.. py:class:: ResumableJobMixin(*, durable = True, **kwargs)

   Airflow <3.3 stub, task_state_store unavailable, always submits fresh.


   .. py:attribute:: external_id_key
      :type:  str
      :value: 'redshift_statement_id'



   .. py:attribute:: durable
      :value: True



   .. py:method:: execute_resumable(context)


.. py:class:: RedshiftDataOperator(sql, database = None, cluster_identifier = None, db_user = None, parameters = None, secret_arn = None, statement_name = None, with_event = False, wait_for_completion = True, poll_interval = 10, return_sql_result = False, workgroup_name = None, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), session_id = None, session_keep_alive_seconds = None, **kwargs)

   Bases: :py:obj:`airflow.sdk.ResumableJobMixin`, :py:obj:`airflow.providers.amazon.aws.operators.base_aws.AwsBaseOperator`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.redshift_data.RedshiftDataHook`\ ]


   Executes SQL Statements against an Amazon Redshift cluster using Redshift Data.

   ... see also::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:RedshiftDataOperator`

   :param database: the name of the database
   :param sql: the SQL statement or list of  SQL statement to run
   :param cluster_identifier: unique identifier of a cluster
   :param db_user: the database username
   :param parameters: the parameters for the SQL statement
   :param secret_arn: the name or ARN of the secret that enables db access
   :param statement_name: the name of the SQL statement
   :param with_event: indicates whether to send an event to EventBridge
   :param wait_for_completion: indicates whether to wait for a result, if True wait, if False don't wait
   :param poll_interval: how often in seconds to check the query status
   :param return_sql_result: if True will return the result of an SQL statement,
       if False (default) will return statement ID
   :param workgroup_name: name of the Redshift Serverless workgroup. Mutually exclusive with
       `cluster_identifier`. Specify this parameter to query Redshift Serverless. More info
       https://docs.aws.amazon.com/redshift/latest/mgmt/working-with-serverless.html
   :param session_id: the session identifier of the query
   :param session_keep_alive_seconds: duration in seconds to keep the session alive after the query
       finishes. The maximum time a session can keep alive is 24 hours
   :param aws_conn_id: The Airflow connection used for AWS credentials.
       If this is ``None`` or empty then the default boto3 behaviour is used. If
       running Airflow in a distributed manner and aws_conn_id is None or
       empty, then default boto3 configuration would be used (and must be
       maintained on each worker node).
   :param region_name: AWS region_name. If not specified then the default boto3 behaviour is used.
   :param verify: Whether to verify SSL certificates. See:
       https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param botocore_config: Configuration dictionary (key-values) for botocore client. See:
       https://botocore.amazonaws.com/v1/documentation/api/latest/reference/config.html
   :param durable: When ``True`` (the default), the Redshift statement id is persisted to task
       state before polling begins. A worker crash on retry reconnects to the existing statement
       instead of resubmitting the SQL. Set to ``False`` to always submit fresh SQL on retry.
       Requires Airflow 3.3+; ignored silently on earlier versions.


   .. py:attribute:: aws_hook_class


   .. py:attribute:: external_id_key
      :value: 'redshift_statement_id'



   .. py:attribute:: template_fields


   .. py:attribute:: template_ext
      :value: ('.sql',)



   .. py:attribute:: template_fields_renderers


   .. py:attribute:: database
      :value: None



   .. py:attribute:: sql


   .. py:attribute:: cluster_identifier
      :value: None



   .. py:attribute:: workgroup_name
      :value: None



   .. py:attribute:: db_user
      :value: None



   .. py:attribute:: parameters
      :value: None



   .. py:attribute:: secret_arn
      :value: None



   .. py:attribute:: statement_name
      :value: None



   .. py:attribute:: with_event
      :value: False



   .. py:attribute:: wait_for_completion
      :value: True



   .. py:attribute:: return_sql_result
      :value: False



   .. py:attribute:: deferrable


   .. py:attribute:: session_id
      :value: None



   .. py:attribute:: session_keep_alive_seconds
      :value: None



   .. py:method:: execute(context)

      Execute a statement against Amazon Redshift.



   .. py:method:: execute_complete(context, event = None)


   .. py:method:: get_sql_results(statement_id, return_sql_result)

      Retrieve either the result of the SQL query, or the statement ID(s).

      :param statement_id: Statement ID of the running queries
      :param return_sql_result: Boolean, true if results should be returned



   .. py:method:: on_kill()

      Cancel the submitted redshift query.



   .. py:method:: submit_job(context)

      Submit the statement for execution and return its statement id.



   .. py:method:: get_job_status(external_id, context)

      Query the raw statement status; a missing/expired statement degrades to NOT_FOUND.



   .. py:method:: is_job_active(status)

      Return True if the job is still running and can be reconnected to.

      ``status`` is a raw string returned by the external system — not an Airflow enum.
      Its values are backend-specific (e.g. ``"RUNNING"``, ``"Pending"``, ``"ContainerCreating"``).



   .. py:method:: is_job_succeeded(status)

      Return True if the job completed successfully.

      ``status`` is a raw string returned by the external system — not an Airflow enum.
      Its values are backend-specific (e.g. ``"FINISHED"``, ``"Succeeded"``).



   .. py:method:: poll_until_complete(external_id, context)

      Block until the job reaches a terminal state. Raise on failure.



   .. py:method:: get_job_result(external_id, context)

      Return the job result after completion. Return None if not applicable.



